plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.14.2' // https://github.com/JetBrains/gradle-intellij-plugin
}

repositories {
    maven {
        url 'https://oss.sonatype.org/content/repositories/snapshots/'
    }
    gradlePluginPortal()
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
}

apply plugin: 'java'
apply plugin: 'org.jetbrains.intellij'

group = pluginGroup
version = pluginVersion + '-' + platformVersion

java.sourceCompatibility = '17.0'
compileJava.options.encoding = 'UTF-8'

intellij {
    version = platformVersion
    type = platformType
    plugins = platformPlugins.split(',').collect { it.trim() }
    downloadSources = true

    patchPluginXml {
        sinceBuild = pluginSinceBuild
        untilBuild = pluginUntilBuild
        changeNotes = """
                <ul>
                    <li>421 - End of comments containing quotes not always detected</li>
                    <li>418 - Globally opened modules don’t participate in autocomplete resolution</li>
                </ul>
                <p><a href="https://github.com/giraud/reasonml-idea-plugin/blob/master/CHANGELOG.md">Full change log...</a></p>
                <p/>
                <p>To see how to integrate tools, go to the website.</p>
            """.stripIndent()
    }
}

runPluginVerifier {
    ideVersions = [platformVersion]
}

runIde {
    systemProperty 'idea.is.internal', true
    jvmArgs '-Xmx2G'
    // MAVEN_CACHE C:\Users\hgiraud\scoop\persist\maven\.m2
    // MAVEN_HOME  C:\Users\hgiraud\scoop\apps\maven\current
    // MAVEN_REPOSITORY C:\Users\hgiraud\scoop\persist\maven\.m2\repository
}
